WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168181
Fix crashes after [NSURLSession invalidateAndCancel]
https://bugs.webkit.org/show_bug.cgi?id=168181
Summary
Fix crashes after [NSURLSession invalidateAndCancel]
Alex Christensen
Reported
2017-02-11 18:52:33 PST
Fix crashes after [NSURLSession invalidateAndCancel]
Attachments
Patch
(10.58 KB, patch)
2017-02-11 19:27 PST
,
Alex Christensen
beidson
: review+
Details
Formatted Diff
Diff
patch
(10.06 KB, patch)
2017-02-11 19:28 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-02-11 19:27:58 PST
Created
attachment 301288
[details]
Patch
Alex Christensen
Comment 2
2017-02-11 19:28:08 PST
Created
attachment 301289
[details]
patch
Alex Christensen
Comment 3
2017-02-11 20:12:21 PST
http://trac.webkit.org/r212198
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug